--- a/package.json
+++ b/package.json
@@ -14,15 +14,20 @@
     "@react-navigation/material-bottom-tabs": "^6.2.1",
     "expo": "~44.0.0",
     "expo-status-bar": "~1.2.0",
+    "install": "^0.13.0",
+    "native-base": "2.11",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-elements": "^3.4.2",
+    "react-native-keyboard-aware-scroll-view": "^0.9.0",
     "react-native-paper": "^4.12.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
+    "react-native-svg": "12.1.1",
     "react-native-vector-icons": "^9.1.0",
-    "react-native-web": "0.17.1"
+    "react-native-web": "^0.11.7",
+    "@expo/webpack-config": "~0.16.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
