--- a/package.json
+++ b/package.json
@@ -10,27 +10,25 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-navigation/bottom-tabs": "^6.3.1",
-    "@react-navigation/material-bottom-tabs": "^6.2.1",
-    "expo": "~44.0.0",
-    "expo-status-bar": "~1.2.0",
-    "install": "^0.13.0",
-    "native-base": "2.11",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-native": "0.64.3",
+    "@react-navigation/bottom-tabs": "^6.0.4",
+    "expo": "~42.0.1",
+    "expo-status-bar": "~1.0.4",
+    "moment": "^2.29.1",
+    "native-base": "^3.0.7",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-elements": "^3.4.2",
-    "react-native-keyboard-aware-scroll-view": "^0.9.0",
-    "react-native-paper": "^4.12.1",
-    "react-native-safe-area-context": "3.3.2",
-    "react-native-screens": "~3.10.1",
+    "react-native-safe-area-context": "3.2.0",
+    "react-native-screens": "~3.4.0",
     "react-native-svg": "12.1.1",
-    "react-native-vector-icons": "^9.1.0",
-    "react-native-web": "^0.11.7",
-    "@expo/webpack-config": "~0.16.2"
+    "react-native-web": "~0.13.12",
+    "react-native-webview": "^11.6.2",
+    "styled-components": "^5.3.0",
+    "styled-system": "^5.1.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.9.0"
   },
   "private": true
 }
